syntax = "proto3";

package transaction;

option go_package = "./pb";

message TransactionsReq {
    string search = 1;
    string filter_start = 2;
    string filter_end = 3;
    string sort_by = 4;
    string sort_type = 5;
    string pagination_limit = 6;
    string pagination_page = 7;
  }

message TopUpReq{
    string amount = 1;
    string source_of_fund = 2;
}

message TransferReq{
    string wallet_number = 1;
    string amount = 2;
    string description = 3;
}

message TransactionRes{
    enum TRANSACTION_TYPES{
        TRANSFER = 0;
        TOP_UP = 1;
        GAME_REWARD = 2;
    }
    enum SOURCE_OF_FUNDS{
        BANK_TRANSFER = 0;
        CREDIT_CARD = 1;
        CASH = 2;
        REWARD = 3;
    }
    uint32 id = 1;
    string created_at = 2;
    TRANSACTION_TYPES transaction_type = 3;
    SOURCE_OF_FUNDS source_of_fund = 4;
    string sender = 5;
    string receiver = 6;
    string amount = 7;
    string description = 8;
}

message TransactionPaginationRes{
    repeated TransactionRes data = 1;
    int32 total_date = 2;
    int32 total_page = 3;
    int32 page = 4;
}

service TransactionService{
    rpc GetAllTransactions(TransactionsReq) returns (TransactionPaginationRes);
    rpc Transfer(TransferReq) returns (TransactionRes);
    rpc TopUp(TopUpReq) returns (TransactionRes);
}

